# fastai-lesson2

./: README.md  pyproject.toml
notebooks/: 03-which-image-models-are-best.ipynb  1.ipynb  dogs_cats.ipynb  server (1).ipynb
ui/: index.html
